projects/vb6parse/snapshots/tests/invalid_syntax/missing_end/missing_end_type_before_next_function_failures.snap
---
source: projects/vb6parse/tests/invalid_syntax/missing_end.rs
expression: "failures.iter().map(|f| format!(\"{f:?}\")).collect::<Vec<_>>()"
---
- "ErrorDetails { source_name: \"test.bas\", source_content: \"\\nType Point\\n    X As Long\\n    Y As Long\\nFunction GetValue() As Long\\n    GetValue = 1\\nEnd Function\\n\", error_offset: 40, line_start: 5, line_end: 5, kind: Parser(UnexpectedTokens { expected: [\"End Type\"], found: [FunctionKeyword] }), severity: Error, labels: [], notes: [] }"
