projects/vb6parse/snapshots/tests/invalid_syntax/missing_end/missing_end_type_before_next_type_failures.snap
---
source: projects/vb6parse/tests/invalid_syntax/missing_end.rs
expression: failure_messages
---
- "ErrorDetails { source_name: \"test.bas\", source_content: \"\\nType Point\\n    X As Long\\n    Y As Long\\nType Size\\n    Width As Long\\n    Height As Long\\nEnd Type\\n\", error_offset: 40, line_start: 5, line_end: 5, kind: Parser(UnexpectedTokens { expected: [\"End Type\"], found: [TypeKeyword] }), severity: Error, labels: [], notes: [] }"
